<resources>
    <string name="app_name">Orcelis</string>
    <string name="title_parcelas">Explotaciones</string>
    <string name="title_informes">Historial</string>
    <string name="title_configuracion">Configuración</string>
    <string name="nombre">Nombre</string>
    <string name="pais">País</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repetir_contrasenia">Repetir contraseña</string>

    <string name="account_type">es.orcelis.orcelis.account</string>
    <string name="provider_authority">es.orcelis.orcelis</string>

    <!-- Login -->

    <string name="creando_cuenta">Creando cuenta…</string>
    <string name="min_caracteres">mínimo 3 caracteres</string>
    <string name="pais_valido">Introduce un país</string>
    <string name="email_valido">Introduce un email válido</string>
    <string name="numero_caracteres">Entre 4 y 10 caracteres alfanumérico</string>
    <string name="password_incorrecta">La contraseña no coincide</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="con_cuenta">Ya tienes cuenta? Accede aquí</string>

    <string name="login_falla">Login incorrecto</string>
    <string name="autenticando">Autenticando…</string>
    <string name="sin_contrasenia">Aún no tienes cuenta? Créate una</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="msg_login_error">Email o contraseña incorrecto, por favor, intentelo de nuevo</string>


    <!-- Cultivos -->
    <string name="tv_nuevo">Nuevo</string>
    <string name="tv_inspecccion">Inspeccion</string>
    <string name="tv_cultivo">Cultivo</string>


    <!-- Trips -->
    <string name="title_pasos">Pasos a seguir</string>
    <string name="tv_eleccion_cultivo">Elija un cultivo</string>
    <string name="tv_inspecciones">Inspecciones</string>
    <string name="tv_finalizar">Finalizar</string>
    <string name="tv_siguiente">Siguiente</string>
    <string name="tv_cultivo_seleccionado">Cultivo seleccionado: </string>
    <string name="cargando">Cargando…</string>
    <string name="title_cultivos">Cultivos</string>
    <string name="add_nueva_plaga">Añadir nueva plaga</string>
    <string name="tv_obligatorio_select_cultivo">Por favor, seleccione un cultivo</string>


    <!-- Añadir nota -->
    <string name="tv_add_photo">Agregue una foto</string>
    <string name="tv_elije_plaga">Elija la plaga</string>
    <string name="tv_utilizar_localizacion">Usando la localización actual…</string>
    <string name="tv_agregue_fotos">Agregue una nota…</string>

    <string name="tv_campo_obligatorio">Campo obligatorio</string>
    <string name="btn_ok">OK</string>

    <!-- Crear cultivo -->

    <string name="tv_crear_title_cultivo">Nombre del cultivo</string>

</resources>
