<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_drag_handle_white_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_botom_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_claro"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/bnt_anterior_paso"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/accent_oscuro"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_menu"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/padding_menu">

            <TextView
                android:id="@+id/title_cultivo_seleccionado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_cultivo_seleccionado"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cultivo_seleccionado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="cultvivo xxx  "
                android:textColor="@color/oil" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_finalizar_pasos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@color/accent_oscuro"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_finalizar"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_siguiente_paso"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/accent_oscuro"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris_claro"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_content">

        <LinearLayout
            android:id="@+id/btn_add_new_plaga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="@dimen/size_add_button"
                android:layout_height="@dimen/size_add_button"
                android:layout_weight="1"
                android:background="@drawable/shape_circle"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_add_black_24dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/padding_content"
                android:text="@string/add_nueva_plaga"
                android:textColor="@color/oil"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_claro"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="4"
            android:background="@color/azul_background_mapa"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_listado_plagas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</LinearLayout>